# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).

This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [v0.1.1] 2023-12-24

### Added

- public option `Level` in HandlerOptions

## [v0.1.0] 2023-11-11

### Added

- Implementation for WithGroup, WithAttrs, Configuration for slog.Level

## [v0.0.1] 2023-09-20

### Added

- initial version of otelslog open-telemetry structured logger