@@ -18,5 +18,5 @@ package otelslog
 
 // Version is the current release version of OpenTelemetry Slog in use.
 func Version() string {
-	return "0.0.1"
+	return "0.1.2"
 }
